fix overflow of option title

--- a/imports/plugins/included/default-theme/client/styles/products/childVariant.less
+++ b/imports/plugins/included/default-theme/client/styles/products/childVariant.less
@@ -22,7 +22,8 @@
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
-  width: auto;
+  max-width: 25%;
+  width: 25%;
   padding: 10px;
 
   @media only screen and (max-width: @screen-xs-max) {
@@ -59,6 +60,7 @@
   display: flex;
   flex: 0 0 auto;
   justify-content: center;
+  white-space: pre-wrap;
   padding: 10px;
 }
 
